env prod and env

--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -47,7 +47,7 @@
                     class="tui-island__footer-button"
                     (click)="navigateToWebSocketItem()"
                   >
-                    SCOREBOARD ADMIN WebSocket
+                    SCOREBOARD ADMIN
                   </button>
                   <button
                     appearance="flat"
@@ -57,28 +57,28 @@
                     class="tui-island__footer-button"
                     (click)="navigateToWebSocketScoreboardDisplay(matchWithFullData.match_id!)"
                   >
-                    SCOREBOARD VIEW WebSocket
-                  </button>
-                  <button
-                    appearance="flat"
-                    size="xl"
-                    tuiButton
-                    type="button"
-                    class="tui-island__footer-button"
-                    (click)="navigateToScoreboardAdmin(matchWithFullData.match_id!)"
-                  >
-                    SCOREBOARD ADMIN
-                  </button>
-                  <button
-                    appearance="flat"
-                    size="xl"
-                    tuiButton
-                    type="button"
-                    class="tui-island__footer-button"
-                    (click)="navigateToScoreboardDisplay(matchWithFullData.match_id!)"
-                  >
                     SCOREBOARD VIEW
                   </button>
+                  <!--                  <button-->
+                  <!--                    appearance="flat"-->
+                  <!--                    size="xl"-->
+                  <!--                    tuiButton-->
+                  <!--                    type="button"-->
+                  <!--                    class="tui-island__footer-button"-->
+                  <!--                    (click)="navigateToScoreboardAdmin(matchWithFullData.match_id!)"-->
+                  <!--                  >-->
+                  <!--                    SCOREBOARD ADMIN-->
+                  <!--                  </button>-->
+                  <!--                  <button-->
+                  <!--                    appearance="flat"-->
+                  <!--                    size="xl"-->
+                  <!--                    tuiButton-->
+                  <!--                    type="button"-->
+                  <!--                    class="tui-island__footer-button"-->
+                  <!--                    (click)="navigateToScoreboardDisplay(matchWithFullData.match_id!)"-->
+                  <!--                  >-->
+                  <!--                    SCOREBOARD VIEW-->
+                  <!--                  </button>-->
                   <app-delete-button
                     [item]="buttonTitle"
                     [buttonClass]="'tui-island__footer-button'"
