scoreboard flat styles

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
@@ -1,271 +1,16 @@
-.body {
-  font-family: "Arial", serif;
-  background-color: #cecece;
-  margin: 0;
-}
-
-//
-//.main-scoreboard,
-//.fullhd-scoreboard-container {
-//  //display: grid;
-//  padding: 10px;
-//  font-family: 'Gunterz-Regular', sans-serif;
-//
-//  color: #ffffff;
-//  font-weight: bold;
-//  text-shadow: 0 1px 8px #000;
+//html, body {
+//  margin: 0;
+//  width: 1920px;
+//  height: 900px;
 //}
-//
+
 .main-container-fullhd {
   //border: 5px solid #000000;
 
   display: grid;
   grid-template-columns: 1920px;
-  grid-template-rows: 960px 100px;
+  grid-template-rows: 920px 80px;
   align-items: stretch;
   justify-items: center;
 
 }
-
-//
-//.fullhd-scoreboard {
-//  //border: 5px solid #870000;
-//
-//  display: grid;
-//
-//  grid-template-columns: auto auto;
-//  grid-template-rows: auto;
-//
-//  grid-gap: 0; /* Set the gap to 0 to remove spaces between grid items */
-//
-//  align-content: start;
-//  justify-content: start;
-//  margin: 0;
-//
-//  color: #ffffff;
-//  font-weight: bold;
-//  text-shadow: 0 1px 8px #000;
-//}
-//
-//.teams-container {
-//  display: grid;
-//
-//  border: 2px solid #000000;
-//  grid-template-columns: auto auto;
-//}
-//
-//.game-container {
-//  display: grid;
-//
-//  background-color: #4A4A4AFF;
-//
-//  border-top: 2px solid #000000;
-//  border-bottom: 2px solid #000000;
-//  grid-template-columns: auto auto auto auto;
-//}
-//
-//.team_a-detail,
-//.team_b-detail {
-//  display: grid;
-//  grid-column-gap: 5px;
-//  grid-template-rows: auto auto;
-//  grid-template-columns: auto auto auto;
-//  align-items: center;
-//  justify-content: center;
-//  height: 70px;
-//  font-size: 16px; /* Set a default font size */
-//  overflow: hidden; /* Ensure overflow is hidden in the parent */
-//}
-//
-//.team_a-detail {
-//  display: grid;
-//  grid-template-rows: 75% 15%;
-//  background-color: orangered;
-//}
-//
-//.team_b-detail {
-//  background-color: cornflowerblue;
-//}
-//
-//.team_a-name,
-//.team_b-name {
-//  width: 250px;
-//  //border: 5px solid #ffc710;
-//
-//  display: grid;
-//  justify-content: end;
-//
-//}
-//
-//.team_a-name span,
-//.team_b-name span {
-//  font-size: 26px;
-//  //border: 5px solid #670a54;
-//
-//  text-transform: uppercase;
-//  white-space: nowrap;
-//  overflow: hidden;
-//  text-overflow: ellipsis;
-//
-//  padding-right: 5px;
-//}
-//
-//.team_a-thisgame,
-//.team_b-thisgame {
-//  display: grid;
-//
-//  justify-content: center;
-//
-//}
-//
-//.team_a-timeout span,
-//.team_b-timeout span {
-//  font-size: 16px;
-//
-//}
-//
-//
-//.team_a-logo,
-//.team_b-logo {
-//  display: grid;
-//
-//  align-items: center;
-//  justify-content: center;
-//
-//  width: 100px;
-//  height: 70px;
-//  grid-row: span 2;
-//
-//  overflow: hidden;
-//}
-//
-//.team_a-logo img,
-//.team_b-logo img {
-//
-//  transform: scale(2);
-//}
-//
-//.team_a-scoreblock,
-//.team_b-scoreblock {
-//  grid-row: span 2;
-//
-//  font-family: 'IntegralCF-Bold', sans-serif;
-//  display: grid;
-//
-//  height: 100%;
-//  width: 70px;
-//
-//  align-items: center;
-//  justify-content: center;
-//
-//  background-color: rgba(31, 31, 31, 0.8);
-//
-//  padding: 0 5px;
-//
-//}
-//
-//.team_a-scoreblock span,
-//.team_b-scoreblock span {
-//  font-size: 40px;
-//}
-//
-//.quarter {
-//  display: grid;
-//  width: 70px;
-//  height: 100%;
-//
-//  border-right: 2px solid #000000;
-//
-//
-//  align-items: center;
-//  justify-content: center;
-//  margin: 0;
-//
-//  padding: 0 5px;
-//
-//}
-//
-//.quarter span {
-//
-//  font-size: 20px;
-//  font-weight: bold;
-//
-//  text-transform: uppercase;
-//
-//}
-//
-//.play-clock {
-//  display: grid;
-//  width: 60px;
-//  height: 100%;
-//
-//  border-right: 2px solid #000000;
-//
-//  align-items: center;
-//  justify-content: center;
-//  margin: 0;
-//
-//  padding: 0 5px;
-//
-//}
-//
-//.play-clock span {
-//
-//  font-size: 28px;
-//  color: #ffc710;
-//
-//  text-transform: uppercase;
-//
-//}
-//
-//.play-clock.red-text span {
-//  color: red;
-//}
-//
-//.timeleft {
-//  display: grid;
-//  width: 100px;
-//  height: 100%;
-//
-//  font-size: 28px;
-//  align-items: center;
-//  justify-content: center;
-//  border-right: 2px solid #000000;
-//  text-transform: uppercase;
-//
-//  margin: 0;
-//  padding: 0 5px;
-//
-//}
-//
-//.downandyard {
-//  display: grid;
-//  grid-template-columns: auto auto;
-//  width: 200px;
-//  height: 100%;
-//
-//  background: #808080;
-//
-//  border-right: 2px solid #000000;
-//
-//  align-items: center;
-//  justify-content: center;
-//  margin: 0;
-//}
-//
-//.downandyard span {
-//
-//  font-size: 26px;
-//  /*-webkit-text-stroke: 1px black;*/
-//
-//  text-transform: uppercase;
-//
-//}
-//
-//
-//.quarter,
-//.play-clock,
-//.timeleft,
-//.downandyard {
-//  font-family: 'IntegralCF-DemiBold', sans-serif;
-//}
