--- a/src/styles.less
+++ b/src/styles.less
@@ -8,10 +8,11 @@ router-outlet {
 }
 
 html {
-  //height: 100%;
+  margin: 0;
 }
 
 body {
+  margin: 0;
   //min-height: 100%;
   //display: grid;
   //grid-template-rows: 100%;
