--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.html
@@ -16,7 +16,7 @@
 
     <app-admin-submit-button
       style="width: 100%"
-      (click)="updateDownAndDistance(data.match_data!)"
+      (click)="updateDownAndDistance(data?.match_data!)"
       [disabled]="disabled"
     ></app-admin-submit-button>
   </form>
