--- a/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.html
@@ -22,7 +22,7 @@
     <app-admin-submit-button
       style="width: 100%"
       [disabled]="disabled"
-      (click)="updateQuarter(data.match_data!)"
+      (click)="updateQuarter(data?.match_data!)"
     ></app-admin-submit-button>
 
   </form>
