--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -1,5 +1,6 @@
 @if (data) {
-  <div class="fullhd-scoreboard">
+  <div
+    class="fullhd-scoreboard">
     <div [class]="scoreboardDisplayClass">
       <div class="teams-container">
         <div
