--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -19,7 +19,7 @@
 
           <div class="team_a-logo">
             <img
-              src="{{staticUrl}}{{
+              src="{{staticUrl}}{{staticPort}}{{
               data.scoreboard_data?.use_team_a_game_logo ?
               data.scoreboard_data?.team_a_game_logo :
               data.teams_data?.team_a?.team_logo_url}}"
@@ -52,7 +52,7 @@
           </div>
           <div class="team_b-logo">
             <img
-              src="{{staticUrl}}{{
+              src="{{staticUrl}}{{staticPort}}{{
               data.scoreboard_data?.use_team_b_game_logo ?
               data.scoreboard_data?.team_b_game_logo :
               data.teams_data?.team_b?.team_logo_url}}"
