--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -5,8 +5,10 @@
       {{ team.title | uppercase }}
     </h3>
     <p>
-      {{ staticUrl }}{{ staticPort }}{{ team.team_logo_url }}
-      {{ urlWithPort }}
+      url {{ staticUrl }}
+      port {{ staticPort }}
+      team url {{ team.team_logo_url }}
+      full url with port {{ urlWithPort }}
       <img
         src="{{urlWithPort}}{{team.team_logo_url}}"
         (error)="onImgError($event)"
