--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -13,11 +13,18 @@
 
       <img
         src="{{url}}{{team.team_logo_url}}"
-        (error)="onImgError($event)"
         width="100px"
         height="100px"
         alt="{{team.title | uppercase}} Logo"
       ></p>
+
+    <!--      <img-->
+    <!--        src="{{url}}{{team.team_logo_url}}"-->
+    <!--        (error)="onImgError($event)"-->
+    <!--        width="100px"-->
+    <!--        height="100px"-->
+    <!--        alt="{{team.title | uppercase}} Logo"-->
+    <!--      ></p>-->
     <p class="content__title_description">{{ team.city }}</p>
 
   </div>
