--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -3,6 +3,13 @@
     <h3 class="tui-text_h3">
       {{ tournament.title | uppercase }}
     </h3>
+    <p>
+      <img
+        src="{{url}}{{tournament.tournament_logo_url}}"
+        width="100px"
+        alt="{{tournament.title | uppercase}} Logo"
+      >
+    </p>
     <p class="content__title_description">{{ tournament.description }}</p>
   } @else {
     <h3 class="tui-text_h3">
