--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -241,7 +241,7 @@
 
 .timeleft {
   display: grid;
-  grid-template-columns:  40% 15% 40%;
+  grid-template-columns:  auto;
   align-items: center;
   justify-content: center;
   width: 100px;
