parse and create match from eesl

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -26,6 +26,7 @@
               width="50"
               height="50"
               (error)="onImgError($event)"
+              [style.transform]="logoTeamAScale"
             >
           </div>
           <div class="team-scoreblock">
@@ -59,6 +60,7 @@
               width="50"
               height="50"
               (error)="onImgError($event)"
+              [style.transform]="logoTeamBScale"
             >
           </div>
           <div class="team-scoreblock">
