--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -161,7 +161,7 @@
 .team_a-logo img,
 .team_b-logo img {
 
-  transform: scale(2);
+  //transform: scale(2);
 }
 
 .team-scoreblock {
@@ -184,6 +184,7 @@
 }
 
 .team-scoreblock span {
+  display: contents;
   font-size: 44px;
 }
 
